--- a/project/pom.xml
+++ b/project/pom.xml
@@ -15,8 +15,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <spring.boot.version>2.6.4</spring.boot.version> <!-- Specify Spring Boot version -->
     </properties>
 
@@ -37,10 +37,10 @@
         
         <!-- Jakarta Persistence API -->
         <dependency>
-            <groupId>jakarta.persistence</groupId>
-            <artifactId>jakarta.persistence-api</artifactId>
-            <version>3.0.0</version> <!-- or the version compatible with your project -->
-        </dependency>
+    <groupId>jakarta.persistence</groupId>
+    <artifactId>jakarta.persistence-api</artifactId>
+    <version>3.0.0</version>
+</dependency>
         
         <!-- MySQL Connector Java -->
         <dependency>
